--- a/style.css
+++ b/style.css
@@ -3,18 +3,20 @@
   padding: 0;
   box-sizing: border-box;
   font-family: sans-serif;
-  outline: 1px solid rgba(255, 0, 0, 0.3);
+  /*   outline: 1px solid rgba(255, 0, 0, 0.3); */
 }
 body {
-  outline: 3px solid red;
+  /* outline: 3px solid red; */
 }
 /* For Nav-Bar Utilities ⭐*/
 
 .navbar-mobile,
 .img-pp,
-.navbar-mobile-right .bi-search,
+.navbar-mobile-right .search-button-nav-mobile,
+.search-button-mobile,
 .navbar-left .bi-list,
-.mobile-content-left {
+.mobile-content-left,
+.navbar-search-mobile {
   display: none;
 }
 
@@ -27,7 +29,7 @@ nav {
 }
 
 .navbar-container {
-  max-width: 1300px;
+  width: 100%; /* Diubah */
   padding: 1rem 3rem;
 }
 
@@ -58,13 +60,13 @@ nav {
   display: flex;
   align-items: center;
 }
-.navbar-left img {
+.img-icon {
   width: auto;
   height: 46px;
   object-fit: contain;
   aspect-ratio: 1/1;
 }
-.navbar-left .logo-title {
+.logo-title {
   font-size: 1.25rem;
   line-height: 1;
   font-weight: bold;
@@ -168,14 +170,21 @@ nav {
 /* Responsive Design */
 
 @media (max-width: 640px) {
+  nav {
+    z-index: 100;
+    display: flex; /* Diubah */
+    padding: 0rem 0.2rem;
+    justify-content: space-between;
+  }
   .navbar-mobile,
   .img-pp,
-  .navbar-mobile-right .bi-search,
+  .navbar-mobile-right .search-button-nav-mobile,
+  .search-button-mobile,
   .navbar-left .bi-list {
     display: flex;
   }
   .navbar-container {
-    padding: 0.5rem 0.75rem;
+    padding: 0.5rem 0.5rem;
     gap: 0;
   }
   .navbar-content-left,
@@ -194,17 +203,24 @@ nav {
     display: flex;
   }
   .navbar-left {
-    gap: 1rem;
+    gap: 0rem;
   }
 
   .navbar-mobile-right {
     display: flex;
-    gap: 1rem;
+    gap: 0.5rem;
     align-items: center;
   }
-  .navbar-mobile-right .bi-search {
+  .search-button-nav-mobile {
+    display: flex;
     font-size: 1.5rem;
     color: white;
+    cursor: pointer;
+  }
+  .search-button-nav-mobile.inactive {
+    display: none;
+  }
+  .search-button-mobile {
     cursor: pointer;
   }
   .img-pp {
@@ -228,7 +244,7 @@ nav {
     padding: 1rem 1.5rem;
     gap: 1.25rem;
     transition: transform 0.3s ease;
-    z-index: 999;
+    z-index: 100;
   }
   .mobile-content-left.active {
     /*  left: 0; */
@@ -238,17 +254,63 @@ nav {
     overflow: hidden;
   }
 
-  .overlay {
+  .overlay-navbar {
     position: fixed;
     inset: 0;
     background: rgba(0, 0, 0, 0.4);
     opacity: 0;
     pointer-events: none;
     transition: opacity 0.3s;
-    z-index: 998;
+    z-index: 90;
   }
-  .overlay.active {
+  .overlay-navbar.active {
     opacity: 1;
     pointer-events: auto;
+  }
+  .overlay-global {
+    position: fixed;
+    inset: 0;
+    background: rgba(0, 0, 0, 0);
+    opacity: 0;
+    pointer-events: none;
+    transition: opacity 0.3s;
+    z-index: 99;
+  }
+  .overlay-global.active {
+    opacity: 1;
+    pointer-events: auto;
+  }
+  .mobile-content-left a {
+    display: flex;
+    column-gap: 0.5rem;
+
+    text-decoration: none;
+    color: #ffff;
+    font-size: 21px;
+    line-height: 1;
+    font-weight: bold;
+  }
+  .navbar-search-mobile {
+    display: none;
+    padding: 1px 10px;
+    background-color: white;
+    align-items: center;
+    width: 100%;
+    border-radius: 999px;
+    max-width: 420px;
+    gap: 8px;
+    transition: box-shadow 0.2s ease;
+  }
+  .navbar-search-mobile.active {
+    display: flex;
+  }
+
+  .input-keyword-mobile {
+    color: palevioletred;
+    border: none;
+    outline: none;
+    width: 100%;
+    background: transparent;
+    padding: 10px 14px;
   }
 }
